# openslide-bin

./: .gitattributes  .gitignore  Dockerfile.builder  README.md  bintool  build.sh  meson.build  meson_options.txt
.github/workflows/: build.yml  container.yml  direct.yml  event.yml  pr.yml  release.yml  update-check.yml  update-label.yml  windows.yml
.github/workflows/find-container-digest/: action.yml
artifacts/: common.py  get-introspect-command.py  get-version.py  meson.build  postprocess-binary.py  postprocess-sdist.py  write-bdist.py  write-import-library.py  write-licenses.py  write-project-versions.py  write-universal-bdist.py
artifacts/python/: README.md
machines/: cross-windows-x86_64.ini
