option(
  'openslide_werror',
  type : 'boolean',
  value : false,
  description : 'Fail on compile warnings from OpenSlide/OpenSlide Java',
)
option(
  'version_suffix',
  type : 'string',
  description : 'Suffix to append to the OpenSlide version string',
)
option(
  'all_subprojects',
  type : 'boolean',
  value : false,
  description : 'Enable all subprojects (for building the source tarball)',
)
